// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workers/package/versions .determineUpgrades(npmDep, config) disables major release separation (major) 1`] = `
Array [
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "type": "pin",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) disables major release separation (minor) 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.0.0",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) ignores complex ranges when not pinning 1`] = `
Object {
  "message": "Complex semver ranges such as \\"^0.7.0 || ^0.8.0\\" are not yet supported so won't ever be upgraded",
  "type": "warning",
}
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) ignores pinning for ranges when other upgrade exists 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.7",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) pins minor ranged versions 1`] = `
Array [
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) rejects less than ranges without pinning 1`] = `
Array [
  Object {
    "message": "The current semver range \\"< 0.7.2\\" is not supported so won't ever be upgraded",
    "type": "warning",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) return warning if empty versions 1`] = `
Object {
  "message": "No versions returned from registry for this package",
  "type": "warning",
}
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) return warning if null versions 1`] = `
Object {
  "message": "No versions returned from registry for this package",
  "type": "warning",
}
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns both updates if automerging minor 1`] = `
Array [
  Object {
    "automergeEnabled": true,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns minor update if separate patches not configured 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.0",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.0",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns only one update if automerging any 1`] = `
Array [
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "type": "pin",
  },
  Object {
    "automergeEnabled": true,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns only one update if grouping 1`] = `
Array [
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "type": "pin",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns patch minor and major 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.8.0",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.8.0",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.8.0",
    "changeLogToVersion": "0.8.12",
    "isPatch": true,
    "newVersion": "0.8.12",
    "newVersionMajor": 0,
    "newVersionMinor": 8,
    "type": "patch",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns patch update if automerging patch 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.0",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": true,
    "changeLogFromVersion": "0.9.0",
    "changeLogToVersion": "0.9.7",
    "isPatch": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "patch",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) returns patch update if separatePatchReleases 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.0",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.0",
    "changeLogToVersion": "0.9.7",
    "isPatch": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "patch",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) should allow unstable versions if the current version is unstable 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.0.0-beta",
    "changeLogToVersion": "1.1.0-beta",
    "isMinor": true,
    "newVersion": "1.1.0-beta",
    "newVersionMajor": 1,
    "newVersionMinor": 1,
    "type": "minor",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) should downgrade from missing versions 1`] = `
Object {
  "branchName": "renovate/rollback-{{depName}}-{{newVersionMajor}}.x",
  "isRollback": true,
  "newVersion": "1.16.0",
  "newVersionMajor": 1,
  "semanticPrefix": "fix(deps): ",
  "type": "rollback",
}
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) should treat zero zero caret ranges as pinned 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.0.34",
    "changeLogToVersion": "0.0.35",
    "isMinor": true,
    "isRange": true,
    "newVersion": "^0.0.35",
    "newVersionMajor": 0,
    "newVersionMinor": 0,
    "type": "minor",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) supports > latest versions if configured 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.4.1",
    "changeLogToVersion": "2.0.1",
    "isMajor": true,
    "newVersion": "2.0.1",
    "newVersionMajor": 2,
    "newVersionMinor": 0,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) supports future versions if already future 1`] = `
Array [
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "2.0.3",
    "newVersionMajor": 2,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) supports future versions if configured 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.4.1",
    "changeLogToVersion": "2.0.3",
    "isMajor": true,
    "newVersion": "2.0.3",
    "newVersionMajor": 2,
    "newVersionMinor": 0,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) supports minor and major upgrades for ranged versions 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) supports minor and major upgrades for tilde ranges 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "newVersion": "0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.4.4",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "0.4.4",
    "newVersionMajor": 0,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades .x major ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.7",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "isRange": true,
    "newVersion": "1.x",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades .x minor ranges 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.3.0",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "1.3.0",
    "newVersionMajor": 1,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades .x minor ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.3.0",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "isRange": true,
    "newVersion": "1.4.x",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades less than equal ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.7.2",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "isRange": true,
    "newVersion": "<= 0.9.7",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.7.2",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "isRange": true,
    "newVersion": "<= 1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades minor ranged versions 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.0.1",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "1.0.1",
    "newVersionMajor": 1,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades multiple caret ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.7.2",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "isRange": true,
    "newVersion": "^0.9.0",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.7.2",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "isRange": true,
    "newVersion": "^1.0.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades multiple tilde ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.7.2",
    "changeLogToVersion": "0.9.7",
    "isMinor": true,
    "isRange": true,
    "newVersion": "~0.9.0",
    "newVersionMajor": 0,
    "newVersionMinor": 9,
    "type": "minor",
  },
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.7.2",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "isRange": true,
    "newVersion": "~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades shorthand major ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "0.9.7",
    "changeLogToVersion": "1.4.1",
    "isMajor": true,
    "isRange": true,
    "newVersion": "1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "major",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades shorthand minor ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.3.0",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "isRange": true,
    "newVersion": "1.4",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades tilde ranges 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.3.0",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "newVersion": "1.4.1",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
  Object {
    "automergeEnabled": true,
    "group": Object {
      "prTitle": "{{semanticPrefix}}{{groupName}}",
      "semanticPrefix": "refactor(deps): ",
    },
    "groupName": "Pin Dependencies",
    "isPin": true,
    "newVersion": "1.3.0",
    "newVersionMajor": 1,
    "type": "pin",
  },
]
`;

exports[`workers/package/versions .determineUpgrades(npmDep, config) upgrades tilde ranges without pinning 1`] = `
Array [
  Object {
    "automergeEnabled": false,
    "changeLogFromVersion": "1.3.0",
    "changeLogToVersion": "1.4.1",
    "isMinor": true,
    "isRange": true,
    "newVersion": "~1.4.0",
    "newVersionMajor": 1,
    "newVersionMinor": 4,
    "type": "minor",
  },
]
`;
